--- a/conf/config.properties
+++ b/conf/config.properties
@@ -1,12 +1,8 @@
 server.port=8080
 
-App.contextName="/shopguide"
-shopguideSiteDomain=http\://172.16.0.200\:8080
-#shopguideSiteDomain=http://bms.xxynet.com
-qiniuDomain=http\://insight-video.qiniudn.com/
 
-spring.datasource.url=jdbc:mysql://172.16.0.200:3306/test?characterEncoding=UTF-8&useUnicode=true&autoReconnect=true&zeroDateTimeBehavior=round&useOldAliasMetadataBehavior=true
-spring.datasource.username=remote_user
-spring.datasource.password=vsvz_
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/public?characterEncoding=utf8&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=123456
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.jpa.database = mysql
